infrastructure/vault/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
